--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 baseURL: https://wswind.github.io
-title: "Dev-blog by WS"
+title: "Dev Blog"
 paginate: 5
 theme: PaperMod
 
@@ -49,7 +49,7 @@ outputs:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  description: "Dev-blog by WS"
+  description: "Dev Blog"
   author: WS
   defaultTheme: auto
   # disableThemeToggle: true
@@ -81,7 +81,7 @@ params:
   #       url: tags
 
   homeInfoParams:
-    Title: "Dev Blog by WS"
+    Title: "Dev Blog"
     Content: "Find your passion."
 
   socialIcons:
